# BE-Rust-Task-Management

./: .gitignore  Cargo.toml  README.md  stress_test.sh
migrations/: 20240101000000_create_users_table.sql  20240101000001_create_tasks_table.sql  20260418999999_seed_data.sql  20260419174500_create_groups_and_user_groups.sql  20260419180500_create_task_groups_table.sql  20260419192500_create_master_progress_table.sql  20260419192700_create_task_progress_table.sql  20260419193800_seed_master_progress.sql  20260420101000_create_master_role_table.sql  20260420101200_create_user_role_table.sql  20260420101500_seed_master_role.sql  20260420102600_create_menu_table.sql  20260420103000_seed_menu.sql  20260427161700_add_story_point_to_tasks.sql  20260501153408_create_history_tasks_table.sql  20260501161154_create_notifications_table.sql  20260501161500_seed_notifications.sql
src/: main.rs
src/api/: group_handlers.rs  handlers.rs  master_handlers.rs  middleware.rs  mod.rs  notification_handlers.rs  router.rs  s3_handlers.rs  task_handlers.rs
src/application/: group_service.rs  master_service.rs  mod.rs  notification_service.rs  task_service.rs  user_service.rs
src/domain/: error.rs  group.rs  master.rs  mod.rs  notification.rs  task.rs  user.rs
src/infrastructure/: group_repository.rs  mod.rs  repositories.rs  s3.rs  task_repository.rs
src/repository/: group_repository.rs  master_repository.rs  mod.rs  notification_repository.rs  task_repository.rs  user_repository.rs
